--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "normalize.css": "^8.0.1"
   }
 }
